implemented most of a training and user api
